Lösungen angefangen und das AB_Basis02 geschrieben

--- a/Tutorial_Website/Basis/AB_Basis/Lösungen/index files/indexAmazonB.html
+++ b/Tutorial_Website/Basis/AB_Basis/Lösungen/index files/indexAmazonB.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--
+        rel =   wir sagen damit aus das es sich hier bei um eine CSS-Datei( Cascading Style Sheet-file) handelt.
+        type =  mit HTML 5 braucht man das nicht mehr 
+        href =  Dateipfad oder Link per URL.
+        media = Das Medienattribut in einem Link-Tag gibt an, wann die CSS-Regeln angewendet werden sollen. wir benutzen den Default-Wert "all"
+    -->
+    <link rel="stylesheet" type="text/css" href="/Tutorial_Website/Basis/AB_Basis/Lösungen/CSS/CSSAmazonB.css" media="all">
+
+
+
+
     <title>Document</title>
 </head>
 <body>
     
+
+    <div>
+
+        <button class="A_Request_B" type = "Button">
+            Request now and get 1 for free!
+        </button>    
+
+    </div>
+    
+
+
 </body>
 </html>
