--- a/Website/Index_Files/index.html
+++ b/Website/Index_Files/index.html
@@ -9,7 +9,6 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-
     <!--Muss noch bearbeitet werden-->
     <header>
         <div class="collapse bg-dark" id="navbarHeader">
@@ -46,45 +45,80 @@
       </header>
 
 
-        <!--Hier öffnen wir die Side bar on the right Side-->
+        <!--Hier öffnen wir die Side bar on the left Side-->
         <a href="#" class="navbar-brand d-flex align-items-center">
-            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Enable both scrolling & backdrop</button>
+            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Open Sidebar</button>
         </a>
 
 
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Backdrop with scrolling</h5>
+            <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Oberthemen</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <p>Try scrolling the rest of the page to see this option in action.</p>
+            <p>1. Symbol</p>
+            <p>2. Symbol</p>
+            <p>3. Symbol</p>
+            <p>4. Symbol</p>
         </div>
         </div>
 
 
 
-<main>
-    <div>
-        <section class="py-5 text-center container">
-            <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Start Seite des glühendes Colts</h1>
-                <p class="lead text-muted">
-                    Auf der dieser Seite finden Sie einen kleinen Überblick über alle wichtigen Informationen.
-                    Dazu werden nicht nur wichtige Informationen angezeigt sondern es werden auch sehr oft wiederholte Informationen angezeigt.
-                    Aber auch Favoriten werden angezeigt, die vom Benutzer markiert wurden.
-                    </p>
-                <p>
-                <!--
-                    <a href="#" class="btn btn-primary my-2">Mitgliedertabelle</a>
-                    <a href="#" class="btn btn-secondary my-2">Angestelltentabelle</a>
-                -->
-                </p>
+<main>  
+    <div class="container mb-5">
+        <div class="row">    
+            <div id="myCarousel" class="carousel" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                        <div class="container">
+                        <div class="carousel-caption text-start">
+                            <h1>Example headline.</h1>
+                            <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                        </div>
+                        </div>
+                    </div>
+                <div class="carousel-item">
+                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h1>Another example headline.</h1>
+                            <p>Some representative placeholder content for the second slide of the carousel.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                    <div class="container">
+                        <div class="carousel-caption text-end">
+                            <h1>One more for good measure.</h1>
+                            <p>Some representative placeholder content for the third slide of this carousel.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            </div>
-        </section>
-    </div>    
+        </div>
+    </div>       
+
     <div class="album py-5 bg-light">
         <div class="container">
 
@@ -96,26 +130,26 @@
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/>
                     <text x="50%" y="50%" fill="#eceeef" dy=".3em">Mitglied 1</text>
                 </svg>
-                <div class="card-body">
-                    <p class="card-text"> 
-                        <table>
-                            <tr>
-                                <ul>Vorname: </ul>
-                                <ul>Nachname: </ul>
-                                <ul>Geburtstag: </ul>
-                            </tr>
-                        </table>
-                
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
+                    <div class="card-body">
+                        <p class="card-text"> 
+                            <table>
+                                <tr>
+                                    <ul>Vorname: </ul>
+                                    <ul>Nachname: </ul>
+                                    <ul>Geburtstag: </ul>
+                                </tr>
+                            </table>
+                    
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
+
+                        </div>
+                        <small class="text-muted">9 mins</small>
+                        </div>
                     </div>
-                    <small class="text-muted">9 mins</small>
-                    </div>
-                </div>
                 </div>
             </div>
 
@@ -138,9 +172,8 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>                        
                     </div>
                     <small class="text-muted">9 mins</small>
                     </div>
@@ -166,9 +199,8 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>                        
                     </div>
                     <small class="text-muted">9 mins</small>
                     </div>
@@ -194,9 +226,8 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
                         <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                     </div>
@@ -222,9 +253,8 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
                         <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                     </div>
@@ -250,9 +280,8 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
                         <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                     </div>
@@ -278,9 +307,8 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>  
                     </div>
                     <small class="text-muted">9 mins</small>
                     </div>
@@ -306,9 +334,8 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>                          
                         </div>
                         <small class="text-muted">9 mins</small>
                         </div>
@@ -334,9 +361,8 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">anschauen</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Anwesend</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Anschauen</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Bearbeiten</button>  
                     </div>
                     <small class="text-muted">9 mins</small>
                     </div>
@@ -348,7 +374,46 @@
         </div>
     </div>    
 
+
+
+
+
+
+
+<!--Hero PLatzhalter oder für zusätzliche Infomationen-->
+<div class="b-example-divider"></div>
+
+<div class="container my-5">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+        <h1 class="display-4 fw-bold lh-1 text-body-emphasis"> Überschrift</h1>
+        <p class="lead">Info Text zum Bild und deren Infomationen. Die Buttons zum weiterleiten</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+        </div>
+    </div>
+    <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+        <img class="rounded-lg-3" src="" alt="Bildliche Infomationen" width="720">
+    </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 </main>
+
+
+
 
 
 
