--- a/Website/Index_Files/LoginWindow.html
+++ b/Website/Index_Files/LoginWindow.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scle=1.0">
+        <meta name="viewport" content="width=device-width, initial-scle=1.0, maximum-scale = 1.0, user-scalable=no, height=device-height">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         
 
@@ -117,11 +117,8 @@
 
       }
 
-
-
       </style>
   
-
 
      <!-- Custom styles for this template -->
      <link href="sign-in.css" rel="stylesheet">
