Angebotsbeschreibung verändert oder Punkte hinzugefügt.

--- a/Website/Index_Files/Pricing.html
+++ b/Website/Index_Files/Pricing.html
@@ -156,7 +156,7 @@
                         <h4 class="my-0 fw-normal">Nur Bogen</h4>
                     </div>
                     <div class="card-body">
-                        <h1 class="card-title pricing-card-title">8€/Mon<small class="text-body-secondary fw-light">/mo</small></h1>
+                        <h1 class="card-title pricing-card-title">8€<small class="text-body-secondary fw-light">/Mon</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>Bogenstände stehen dauerhaft zu Verfügung. Info:(solang es in den Öffungszeiten liegt.)</li>
                             <li>Ausrüstung wird Zuverfügung gestellt, aber beinhaltet keine Sonderausrüstung wie z.B. Armbrust. Info:(schlechter Umgang wird nicht übernommen)</li>
@@ -175,12 +175,12 @@
                     <h4 class="my-0 fw-normal">Nur Luftdruckwaffen</h4>
                 </div>
                     <div class="card-body">
-                        <h1 class="card-title pricing-card-title">10€/Mon<small class="text-body-secondary fw-light">/mo</small></h1>
+                        <h1 class="card-title pricing-card-title">10€<small class="text-body-secondary fw-light">/Mon</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>Schießstände stehen dauerhaft zu Verfügung. Info:(solang es in den Öffungszeiten liegt.)</li>
-                            <li>10 GB of storage</li>
-                            <li>Priority email support</li>
-                            <li>Eventkosten werden von Verein übernommen außer Speziale Munition, Verflegung.</li>
+                            <li>Ausrüstung wie Kopfhörer, Schutzbrille, Munition wird Zuverfügung gestellt, aber beinhaltet keine Sonderausrüstung </li>
+                            <li>Man kann jeder Zeit am Anfang eines Monats austreten</li>
+                            <li>Eventkosten werden von Verein übernommen außer Verflegung.</li>
                         </ul>
                         <button type="button" class="w-100 btn btn-lg btn-primary">Einschreiben</button>
                     </div>
@@ -194,12 +194,12 @@
                         <h4 class="my-0 fw-normal">Nur Feuerwaffen</h4>
                     </div>
                     <div class="card-body">
-                        <h1 class="card-title pricing-card-title">15€/Mon<small class="text-body-secondary fw-light">/mo</small></h1>
+                        <h1 class="card-title pricing-card-title">15€<small class="text-body-secondary fw-light">/Mon</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>Schießstände stehen dauerhaft zu Verfügung. Info:(solang es in den Öffungszeiten liegt.)</li>
-                            <li>15 GB of storage</li>
-                            <li>Phone and email support</li>
-                            <li>Eventkosten werden von Verein übernommen außer Speziale Munition, Verflegung.</li>
+                            <li>Ausrüstung wie Kopfhörer, Schutzbrille, Munition wird Zuverfügung gestellt, aber beinhaltet keine Sonderausrüstung z.B. Zieloptiks.</li>
+                            <li>Man kann jeder Zeit am Anfang eines Monats austreten</li>
+                            <li>Eventkosten werden von Verein übernommen außer Speziale Munition(AP oder große Kaliber wie z.B. 50 Kaliber), Verflegung.</li>
                         </ul>
                         <button type="button" class="w-100 btn btn-lg btn-primary">Einschreiben</button>
                     </div>
@@ -213,11 +213,11 @@
                     <h4 class="my-0 fw-normal">Alles in einem</h4>
                 </div>
                     <div class="card-body">
-                        <h1 class="card-title pricing-card-title">20€/Mon<small class="text-body-secondary fw-light">/mo</small></h1>
+                        <h1 class="card-title pricing-card-title">20€<small class="text-body-secondary fw-light">/Mon</small></h1>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>besitzt dauerhafte Verfügungen für alle Stände/Plätze. Info:(solang es in den Öffungszeiten liegt.)</li>
                             <li>Ausrüstung wird Zuverfügung gestellt, aber beinhaltet keine Sonderausrüstung. Info:(schlechter Umgang wird nicht übernommen)</li>
-                            <li>Email support</li>
+                            <li>Man kann jeder Zeit am Anfang eines Monats austreten</li>
                             <li>Eventkosten werden von Verein übernommen außer Speziale Munition, Verflegung.</li>
                         </ul>
                         <button type="button" class="w-100 btn btn-lg btn-outline-primary">Einschreiben</button>
