--- a/PrimusSvr/assets/web/html/Member/Member_Create.html
+++ b/PrimusSvr/assets/web/html/Member/Member_Create.html
@@ -9,7 +9,7 @@
         <link rel="canonical" href="https://icons.getbootstrap.com/icons/camera/">
         <script src="/assets/js/color-modes.js"></script>
         <link rel="stylesheet" href="assets/font/bootstrap-icons.min.css">
-        <link rel="stylesheet" href="assets/css/docs.css">
+        <link rel="stylesheet" href="/web/css/sidebars.css">
         <title>Neues mit Mitglied erstellen</title>
 
     </head>
