--- a/PrimusSvr/assets/web/html/Member/Member_changes.html
+++ b/PrimusSvr/assets/web/html/Member/Member_changes.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="sidebars.css">
+        <link rel="stylesheet" href="/web/css/sidebars.css">
         
         <link rel="canonical" href="https://icons.getbootstrap.com/icons/camera/"><script src="/assets/js/color-modes.js"></script>
 
