--- a/PrimusSvr/assets/web/html/Member/Member_display.html
+++ b/PrimusSvr/assets/web/html/Member/Member_display.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="sidebars.css">
+    <link rel="stylesheet" href="/web/css/sidebars.css">
     <!--
     <link rel="canonical" href="https://icons.getbootstrap.com/icons/camera/"><script src="/assets/js/color-modes.js"></script>
     <link rel="stylesheet" href="/assets/font/bootstrap-icons.min.css"><link rel="stylesheet" href="/assets/css/docs.css">
@@ -83,12 +83,12 @@
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <span id = "Member_email">Email address</span>
+                        <span id = "Member_email">Email address: </span>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <span id = "TeleNumber">Telefonnummer</span>
+                        <span id = "phoneNumber">Telefonnummer: </span>
                     </div>
                 </div>
 
@@ -154,9 +154,6 @@
                 </div>
             </div>
         </div>
- 
-
-
         <br>
         <div class="container">
                 <button class="btn btn-primary" style = "background-color: rgb(66, 70, 73)">bearbeiten</button>
@@ -167,12 +164,7 @@
     </div>
 
 
-
-
-
-
-
-    <script type="text/javascript" defer src="../../JS_Files/Member/Member_display.js"></script>
-    <script type="text/javascript" src="../../JS_Files/Client/PrimusApiClient.js"></script>
+    <script type="text/javascript" defer src="../../js/Member/Member_Display.js"></script>
+    <script type="text/javascript" src="../../js/Client/PrimusApiClient.js"></script>
 </body>
 </html>
