Ergänzung notwendiger Funktionalität auf Website und visueller Elemente

--- a/PrimusSvr/assets/web/html/Member/Member_Create.html
+++ b/PrimusSvr/assets/web/html/Member/Member_Create.html
@@ -101,7 +101,7 @@
                     -->
                     <div class="col-2">
                         <p>
-                            <label for="date">Geburtstag: </label>
+                            <label for="birth_date">Geburtstag: </label>
                             <input type="date" id="birth_date" />
                         </p>
                         <br><br>
@@ -141,8 +141,8 @@
                         <small>Ihre E-Mail wird nicht weiter verbreitet.</small>
                     </div>
                     <div class="col-4">
-                        <label for = "TeleNumber">Telefonnummer</label>
-                        <input id = "TeleNumber" type="text" class="form-control" placeholder="+49 564 3..5.7...">
+                        <label for = "phoneNumber">Telefonnummer</label>
+                        <input id = "phoneNumber" type="text" class="form-control" placeholder="+49 564 3..5.7...">
                         <small> Bitte keine staatlich genutzte Telefonnummer eingeben. Z.B. 110</small>
                         <br><br>
                     </div>
