--- a/PrimusSvr/assets/web/html/Member/Member_display.html
+++ b/PrimusSvr/assets/web/html/Member/Member_display.html
@@ -136,21 +136,23 @@
             <div class="row">
                 <div class="card">
                     <div class="card-body">
-                        <span id="date">Einstiegdatum:</span>
+                        <span id="membership">Mitgliedschaften: </span>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="card-body">
-                        <span>Notizen und Kommentare</span>
+                        <span id="joindate">Einstiegdatum:</span>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="card-body">
-                        <span>Mitgliedschaften</span>
+                        <span id="notes">Notizen und Kommentare: </span>
                     </div>
                 </div>
+
+                <
             </div>
         </div>
         <br>
