--- a/PrimusSvr/assets/web/html/Member/Member_Tabelle.html
+++ b/PrimusSvr/assets/web/html/Member/Member_Tabelle.html
@@ -38,7 +38,7 @@
                     </span>
                 </button>
                 <a href="/1. Frontend/Website/Index_Files/index.html" class="navbar-brand d-flex align-items-center">  
-                    <strong>Logo</strong>
+                    <img id = "logo" class="Logo" src="../../assets/Logo.jpg" style="width: 10%; height: 10%">
                 </a>
             </div>
         </header>
