--- a/PrimusSvr/assets/web/html/Member/Member_display.html
+++ b/PrimusSvr/assets/web/html/Member/Member_display.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/web/css/sidebars.css">
+    <link rel="stylesheet" href="../../css/Logo.css">
+
     <!--
     <link rel="canonical" href="https://icons.getbootstrap.com/icons/camera/"><script src="/assets/js/color-modes.js"></script>
     <link rel="stylesheet" href="/assets/font/bootstrap-icons.min.css"><link rel="stylesheet" href="/assets/css/docs.css">
@@ -24,7 +26,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a href="/1. Frontend/Website/Index_Files/index.html" class="navbar-brand d-flex align-items-center">  
-                <strong>Logo</strong>
+                <img id = "logo" class="Logo" src="../../assets/Logo.jpg" style="width: 10%; height: 10%">
             </a>
         </div>
     </header>
